--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
     overflow: hidden;
     margin: 0;
+    background-color: #f0f0f0;
 }
 
 #container {
-    width: 100vw;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
