--- a/style.css
+++ b/style.css
@@ -45,3 +45,10 @@ body {
 #container.select{
     cursor: pointer;
 }
+
+#restartContainer {
+    position: fixed;
+    top: 10px; 
+    right: 10px;
+    z-index: 1000;
+  }
